[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/diamond_blue_50x50.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Replay_White.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/Replay_Pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Home_White.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/Home_Presses.png" type="Texture" id=6]
[ext_resource path="res://Scripts/FadeIn.gd" type="Script" id=7]
[ext_resource path="res://Music/Button_Select.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://Assets/Fonts/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=2]

size = 50
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

hinting = 2
font_path = "res://Assets/Fonts/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=4]

size = 70
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=5]

hinting = 2
font_path = "res://Assets/Fonts/kenpixel_high_square.ttf"

[sub_resource type="DynamicFont" id=6]

size = 45
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=10]

hinting = 2
font_path = "res://Assets/Fonts/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=11]

size = 55
use_mipmaps = false
use_filter = true
font_data = SubResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 120, 120 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 120, 120 )

[sub_resource type="Animation" id=9]

resource_name = "Fade_In"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="GameOver" type="ColorRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 450.0
margin_bottom = 650.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.408824 )
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 127.0
margin_top = 23.0
margin_right = 301.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.375, 0.355957, 0.355957, 1 )
text = "SCORE"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Score" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 99.0
margin_right = 359.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "325"
align = 1
valign = 3
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HighScore" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 199.0
margin_right = 328.0
margin_bottom = 239.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "!!! High Score !!!"
align = 3
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Diamond" type="Sprite" parent="." index="3"]

position = Vector2( 193.967, 298.365 )
texture = ExtResource( 2 )

[node name="NoOfDiamonds" type="Label" parent="Diamond" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = -31.0
margin_right = 191.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
text = "27"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 79.0
margin_top = 374.0
margin_right = 368.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Retry" type="TouchScreenButton" parent="HBoxContainer" index="0"]

scale = Vector2( 0.404337, 0.381867 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
bitmask = null
shape = SubResource( 7 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_select"
visibility_mode = 0

[node name="Home" type="TouchScreenButton" parent="HBoxContainer" index="1"]

position = Vector2( 185.684, 0 )
scale = Vector2( 0.39714, 0.3634 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
bitmask = null
shape = SubResource( 8 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="FadeIn" type="ColorRect" parent="." index="5"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -477.0
margin_right = 451.0
margin_bottom = 831.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fade_In = SubResource( 9 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="ButtonSelect" type="AudioStreamPlayer2D" parent="." index="6"]

position = Vector2( 214.826, 220.499 )
stream = ExtResource( 8 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="pressed" from="HBoxContainer/Retry" to="." method="_on_Retry_pressed"]

[connection signal="pressed" from="HBoxContainer/Home" to="." method="_on_Home_pressed"]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]

[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]


